--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,10 +1,85 @@
-@import "fonts";
+@import "null";
 
+//<МИКСИНЫ>=================================================================
+@import "mixins";
+//</МИКСИНЫ>=================================================================
+
+//<Подключаем шрифты>=================================================================
+//&subset-cyrillic-ext
+@import "fonts";
+//</Подключаем шрифты>=================================================================
+
+//<Шрифт по умолчанию>>=================================================================
+$fontfamily: "Montserrat";
+//</Шрифт по умолчанию>>=================================================================
+
+//</ШРИФТЫ>=================================================================
+
+//<ПЕРЕМЕННЫЕ>=================================================================
+$minwidth: 320px;
+$maxWidth: 1440px;
+$maxWidthContainer: 1160px;
+$md1: $maxWidthContainer + 12;
+$md2: 991.98;
+$md3: 767.98;
+$md4: 479.98;
+
+$mainColor: rgba(31, 32, 65, 1);
+$mainColorsf: rgba(31, 32, 65, 0.75);
+$mainColorft: rgba(31, 32, 65, 0.50);
+$mainColortf: rgba(31, 32, 65, 0.25);
+$mainColorzf: rgba(31, 32, 65, 0.05);
+$ColorPurple: rgb(188, 156, 255);
+$ColorGreen: rgb(111, 207, 151);
+//</ПЕРЕМЕННЫЕ>=================================================================
+
+//<ОБНУЛЕНИЕ, ОБЩИЕ ПАРАМЕТРЫ>=================================================================
+@import "null.scss";
 body {
-   font-family: Montserrat, Quicksand;
-   font-size: 50px;
-   background: url("@img/cover.png") 0 0 no-repeat;
-   span {
-    color: red;
-   }
+  color: #000;
+  font-size: 14px;
+  &._lock {
+    overflow: hidden;
+    @media (max-width: $md3+px) {
+      //width:100%
+      //position: fixed;
+      //overflow: hidden;
+    }
+  }
 }
+//</ОБНУЛЕНИЕ, ОБЩИЕ ПАРАМЕТРЫ>=================================================================
+
+//<ОБОЛОЧКА>=================================================================
+.wrapper {
+  width: 100%;
+  min-height: 100%;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  &._loaded {
+  }
+}
+
+//</ОБОЛОЧКА>=================================================================
+
+//<ОСНОВНАЯ СЕТКА>=================================================================
+._container {
+  max-width: $maxWidthContainer + px;
+  padding: 0px 140px;
+  margin: 0 auto;
+}
+//</ОСНОВНАЯ СЕТКА>=================================================================
+
+//<ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>=================================================================
+
+@import "header";
+//</ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>=================================================================
+
+//<ОСНОВНОЙ БЛОК>=================================================================
+.page {
+  
+    flex: 1 1 auto;
+}
+
+//=============================================================================
+//</ОСНОВНОЙ БЛОК>=================================================================
