Add arrows and made header__menu

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -29,11 +29,9 @@
     &__logo {
       padding-right: 11.5px;
     }
-    &__logotext {
-      color: rgb(182, 137, 137);
-    }
     &__menu {
-      flex: 0 0 440.5/1160 * 100%;
+      
+      padding-right: 1px;
     }
     //display none скрыл саблист для удобствва, разделить линки, разделить стрелки, сделать выпадающий список
   }
@@ -43,19 +41,16 @@
       &__body {
         overflow: auto;
         flex: 0 0 390.5/1160 * 100%;
-        
+  
       }
       &__list {
         display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
+        box-sizing: border-box;
       }
       &__item {
         display: flex;
+        margin-right: 20px;
         align-items: center;
-        justify-content: space-between;
-        flex-wrap: wrap;
-        position: relative;
       }
       &__link {
         font-weight: 400;
@@ -69,14 +64,15 @@
       }
      
       &__arrow {
-        margin: 0px 0px 0px 8px;
+        margin: 3px 0px 0px 2.5px;
         transition: all 0.3s ease 0s;
         font-size: 24px;
         
-      }
+      } 
+
       &__sub-list {
         position: relative;
-        background-color: rgb(241, 161, 0);
+        background-color: rgb(148, 201, 214);
         padding: 15px;
         flex: 1 1 100%;
         display: none;
@@ -90,7 +86,7 @@
         line-height: 120%;
       }
     }
-  
+ 
     
     .actions-header {
       &__buttonsignin {
@@ -100,3 +96,43 @@
         color: red;
       }
     }
+    .svg-TOXIN-dims { width: 54px; height: 14px; }
+   
+
+
+    
+    //Иконки стрелочек 
+    ._icon-arrow-down:before {
+      width: 10px;
+      height: 10px;
+      border-right: 2px solid;
+      transform: rotate(45deg);
+      left: 4px;
+      top: 2px;
+      content: "\e900";
+      
+  }
+  
+  ._icon-arrow-down {
+      box-sizing: border-box;
+      position: relative;
+      display: block;
+      width: 24px;
+      height: 21px;
+      
+      color: rgba(31, 32, 65, 0.5);
+      
+      
+  }
+  ._icon-arrow-down::after,
+  ._icon-arrow-down::before {
+      content: "";
+      display: block;
+      box-sizing: border-box;
+      position: absolute;
+      border-bottom: 2px solid;
+     
+      
+  }
+  
+  
