--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -14,11 +14,12 @@
     &__container {
       display: flex;
       align-items: center;
+  
     }
     &__body {
       display: flex;
       align-items: center;
-      padding: 5px 0;
+      padding: 0px 0;
       min-height: 70px;
     }
     &__main {
@@ -83,25 +84,41 @@
       &__sub-link {
         color: #fff;
         line-height: 120%;
+        
       }
     }
  
     .actions-header {
-      padding-left: 18px;
-      
-    }
-    .actions-header {
      
       &__buttonsignin {
-
-
-        color: rgb(199, 2, 2);
         
+        width: 87px;
+        height: 34px;
+        left: 997px;
+        
+        
+
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 22px;
+        border: 2px solid linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+        background: rgb(252, 249, 249);
       }
+
       &__buttonsignup {
         
-        color: red;
+        color:red;
       
+      }
+      &__textin{
+        color: #BC9CFF;
+        padding: 10px;
+        font-weight: 700;
+        font-size: 12px;
+        text-transform: uppercase;
+
+      }
+      &__textup {
+        color: $ColorGreen;
       }
       }
       
