--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -48,7 +48,7 @@
       &__item {
         
         display: flex;
-        margin-right: 20px;
+        margin-right: 19.6px;
         align-items: center;
       }
       &__link {
@@ -61,6 +61,7 @@
       &__link_aboutus {
         font-weight: bold;
         color: rgba(31, 32, 65, 0.75);
+        white-space: nowrap;
       }
      
       &__arrow {
@@ -87,17 +88,16 @@
         
       }
     }
- 
+    .header__actions {
+      width: 100%;
+      height: 100%;
+    }
     .actions-header {
      
       &__buttonsignin {
-        
-        width: 87px;
-        height: 34px;
-        left: 997px;
+       padding: 10px;
         
         
-
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         border-radius: 22px;
         border: 2px solid linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
@@ -155,8 +155,6 @@
       box-sizing: border-box;
       position: absolute;
       border-bottom: 2px solid;
-     
-      
   }
   
   
