--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -53,7 +53,7 @@
       }
       &__link {
         
-        font-weight: 400;
+
         color: inherit;
         transition: color 0.3s ease 0s;
         position: relative;
@@ -91,11 +91,11 @@
     .header__actions {
       width: 100%;
       height: 100%;
-    }
+    }//Скорее всего удалить
     .actions-header {
      
       &__buttonsignin {
-       padding: 10px;
+       padding: 8px;
         
         
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
