--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,3 +1,10 @@
+//переменные---------------------
+:root {
+  --gradient: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+  --border-w: 3px;
+}
+
+//переменные-------------------
 .header {
     background: #ffffff;
     position: absolute;
@@ -64,7 +71,7 @@
         color: rgba(31, 32, 65, 0.75);
         white-space: nowrap;
       }
-     
+      
       &__arrow {
         margin: 3px 0px 0px 2.5px;
         transition: all 0.3s ease 0s;
@@ -93,31 +100,47 @@
       width: 100%;
       height: 100%;
     }//Скорее всего удалить
+    
     .actions-header {
      
       &__buttonsignin {
-       padding: 8px;
-        
-        
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-        border-radius: 22px;
-        border: 2px solid linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
-        background: rgb(252, 249, 249);
+        position: relative;
+        padding: 15px 20px;
+        margin-top: 20px;
+        border: 0;
+        border-radius: 50px;
+        font-size: 20px;
+        font-family: inherit;
+        color: inherit;
+        background: none;
       }
-
-      &__buttonsignup {
-        
-        color:red;
-      
+      &__buttonsignin::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        border-radius: 50px;
+        border: var(--border-w) solid transparent;
+        background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%) border-box;
+        -webkit-mask: linear-gradient(#fff 0 0) padding-box, linear-gradient(#fff 0 0);
+        mask: linear-gradient(#fff 0 0) padding-box, linear-gradient(#fff 0 0);
+        -webkit-mask-composite: destination-out;
+        mask-composite: exclude;
+        transition: all .25s ease-out;
       }
       &__textin{
         color: #BC9CFF;
-        padding: 10px;
         font-weight: 700;
         font-size: 12px;
         text-transform: uppercase;
-
       }
+    
+      &__buttonsignup {
+        color:red;
+      }
+      
       &__textup {
         color: $ColorGreen;
       }
