--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -24,13 +24,6 @@ $md2: 991.98;
 $md3: 767.98;
 $md4: 479.98;
 
-$mainColor: rgba(31, 32, 65, 1);
-$mainColorsf: rgba(31, 32, 65, 0.75);
-$mainColorft: rgba(31, 32, 65, 0.50);
-$mainColortf: rgba(31, 32, 65, 0.25);
-$mainColorzf: rgba(31, 32, 65, 0.05);
-$ColorPurple: rgb(188, 156, 255);
-$ColorGreen: rgb(111, 207, 151);
 //</ПЕРЕМЕННЫЕ>=================================================================
 
 //<ОБНУЛЕНИЕ, ОБЩИЕ ПАРАМЕТРЫ>=================================================================
@@ -74,7 +67,7 @@ body {
 
 @import "header";
 //</ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>=================================================================
-
+@import "footer";
 //<ОСНОВНОЙ БЛОК>=================================================================
 .page {
   
