--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -41,11 +41,13 @@
   
     .menu {
       flex: 0 0 420px;
+      width: 100%;
+      
       &__body {
         overflow: auto;
         flex: 0 0 390.5/1160 * 100%;
         color: rgba(31, 32, 65, 0.5);
-        
+        overflow: hidden;
       }
       &__list {
         display: flex;
@@ -61,6 +63,24 @@
         margin: 0px 3px;
         padding: 5px 0px; //Отсутп безопасности, если пункты начнут складываться друг под друга и будет больше элементов
         position: relative;
+        @media (any-hover: hover) {
+          &:hover{
+            .menu__sub-list{
+              transform: translate(0px, 0px,);
+              opacity: 1;
+              visibility: visible;
+              pointer-events: auto;
+            }
+            .menu__arrow {
+              transform: rotate(-180deg);
+            }
+            .menu__arrow, 
+            .menu__link {
+              color: #BC9CFF;
+            }
+          }
+        }
+        
       }
       &__link {
         color: inherit;
@@ -92,6 +112,7 @@
           transform: translate(0px, 10px);
           min-width: 200px;
           left: 0;
+          pointer-events: none;
           position: absolute;
           top: 100%;
         }
@@ -109,11 +130,12 @@
       }
     }
     .header__actions {
-      width: 100%;
-      height: 100%;
+      width: 443px;
+      
     }//Скорее всего удалить
     
     .actions-header {
+    
       display: flex;
       justify-content: space-between;
       &__buttonsignin {
