--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -36,18 +36,19 @@
     &__logo {
       padding-right: 11.5px;
     }
+    &__menu{
+      display: flex;
+      flex: 0 0 440/1160 * 100%;
+      
+    }
     //display none скрыл саблист для удобствва, разделить линки, разделить стрелки, сделать выпадающий список
   }
   
     .menu {
-      flex: 0 0 420px;
-      width: 100%;
+
       
       &__body {
-        overflow: auto;
-        flex: 0 0 390.5/1160 * 100%;
         color: rgba(31, 32, 65, 0.5);
-        overflow: hidden;
       }
       &__list {
         display: flex;
@@ -107,7 +108,7 @@
         flex: 1 1 100%;
         @media (min-width:$md3+px) {
           opacity: 0;
-          visibility: hidden;
+          visibility: hidden;             
           transition: all 0.3s ease 0s;
           transform: translate(0px, 10px);
           min-width: 200px;
