--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -38,22 +38,22 @@
     }
     &__menu{
       display: flex;
-      flex: 0 0 440/1160 * 100%;
-      
     }
     //display none скрыл саблист для удобствва, разделить линки, разделить стрелки, сделать выпадающий список
   }
   
     .menu {
-
+      flex: 0 0 440/1160 * 100%;
       
       &__body {
         color: rgba(31, 32, 65, 0.5);
+        
       }
       &__list {
+        @media (min-width: $md3+px) {
         display: flex;
-        box-sizing: border-box;
-        justify-content: space-evenly;
+        flex-wrap: wrap;
+        }
       }
       &__item {
         
@@ -67,7 +67,7 @@
         @media (any-hover: hover) {
           &:hover{
             .menu__sub-list{
-              transform: translate(0px, 0px,);
+              transform: translate(0px, 0px);
               opacity: 1;
               visibility: visible;
               pointer-events: auto;
@@ -84,6 +84,7 @@
         
       }
       &__link {
+        font-weight: 400;
         color: inherit;
         transition: color 0.3s ease 0s;
         position: relative;
@@ -92,6 +93,7 @@
         font-weight: bold;
         color: rgba(31, 32, 65, 0.75);
         white-space: nowrap;
+        
       }
       
       &__arrow {
@@ -106,11 +108,11 @@
         background-color: rgb(148, 201, 214);
         padding: 15px;
         flex: 1 1 100%;
-        @media (min-width:$md3+px) {
-          opacity: 0;
-          visibility: hidden;             
+        @media (min-width: $md3+px) {
+          opacity: 0;             
           transition: all 0.3s ease 0s;
           transform: translate(0px, 10px);
+          visibility: hidden;
           min-width: 200px;
           left: 0;
           pointer-events: none;
@@ -131,7 +133,7 @@
       }
     }
     .header__actions {
-      width: 443px;
+      flex: 0 0 443/1160 * 100%;
       
     }//Скорее всего удалить
     
@@ -156,7 +158,7 @@
         left: 0;
         right: 0;
         bottom: 0;
-        border-radius: 50px;
+        border-radius: 22px;
         border: var(--border-w) solid transparent;
         background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%) border-box;
         -webkit-mask: linear-gradient(#fff 0 0) padding-box, linear-gradient(#fff 0 0);
