--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -38,30 +38,31 @@
     }
     &__menu{
       display: flex;
+     
     }
     //display none скрыл саблист для удобствва, разделить линки, разделить стрелки, сделать выпадающий список
   }
   
     .menu {
       flex: 0 0 440/1160 * 100%;
-      
+      justify-content: space-evenly;
+
       &__body {
         color: rgba(31, 32, 65, 0.5);
-        
+        width: 100%;
       }
       &__list {
         @media (min-width: $md3+px) {
         display: flex;
         flex-wrap: wrap;
+        justify-content: space-between;
+        
         }
       }
       &__item {
-        
         display: flex;
         align-items: center;
-        justify-content: space-between;
         flex-wrap: wrap;
-        margin: 0px 3px;
         padding: 5px 0px; //Отсутп безопасности, если пункты начнут складываться друг под друга и будет больше элементов
         position: relative;
         @media (any-hover: hover) {
@@ -133,7 +134,7 @@
       }
     }
     .header__actions {
-      flex: 0 0 443/1160 * 100%;
+      flex: 0 0 330/1160 * 100%;
       
     }//Скорее всего удалить
     
@@ -141,6 +142,7 @@
     
       display: flex;
       justify-content: space-between;
+      padding-left: 27px;
       &__buttonsignin {
         position: relative;
         padding: 9.5px 20.5px;
@@ -205,7 +207,7 @@
       
       border-right: 2px solid;
       transform: rotate(45deg);
-      left: 6px;
+      left: 7px;
       top: 4px;
       content: "\e900";
       
