--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -38,17 +38,18 @@
     }
     &__menu{
       display: flex;
+      margin-right: 27px;
     
     }
     //display none скрыл саблист для удобствва, разделить линки, разделить стрелки, сделать выпадающий список
   }
   
     .menu {
-      flex: 0 0 440/1160 * 100%;
+      flex: 0 0 439.5/1160 * 100%;
 
       &__body {
         width: 100%;
-        
+      
       }
       &__list {
         @media (min-width: $md3+px) {
@@ -64,6 +65,7 @@
         flex-wrap: wrap;
         padding: 5px 0px; //Отсутп безопасности, если пункты начнут складываться друг под друга и будет больше элементов
         position: relative;
+        
         @media (any-hover: hover) {
           &:hover{
             .menu__sub-list {
@@ -155,7 +157,7 @@
       }
     }
     .header__actions {
-      flex: 0 0 330/1160 * 100%;
+      flex: 0 0 303/1160 * 100%;
       
     }//Скорее всего удалить
     
@@ -163,7 +165,6 @@
     
       display: flex;
       justify-content: space-between;
-      padding-left: 27px;
       &__buttonsignin {
         position: relative;
         padding: 9.5px 20.5px;
@@ -176,6 +177,7 @@
         box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
       }
       &__buttonsignin::before {
+        
         content: "";
         position: absolute;
         top: 0;
@@ -238,7 +240,7 @@
       display: block;
       color: rgba(31, 32, 65, 0.5);
       align-items: center;
-      margin: 0px 7px 13px 8.77px;
+      margin: 0px 9px 13px 8.77px;
   }
   ._icon-arrow-down::after,
   ._icon-arrow-down::before {
