--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -49,7 +49,6 @@
 
       &__body {
         width: 100%;
-      
       }
       &__list {
         @media (min-width: $md3+px) {
@@ -165,6 +164,7 @@
     
       display: flex;
       justify-content: space-between;
+      @include adaptiv-value("gap", 20, 15, 1);
       &__buttonsignin {
         position: relative;
         padding: 9.5px 20.5px;
