--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -32,9 +32,16 @@
       display: flex;
       align-items: center;
       flex: 0 0 390.5/1160 * 100%;
+  
     }
     &__logo {
       padding-right: 11.5px;
+      position: relative;
+      z-index: 5;
+    }
+    &__logotext{
+      position: relative;
+      z-index: 5;
     }
     &__menu{
       display: flex;
@@ -49,6 +56,19 @@
 
       &__body {
         width: 100%;
+        @media (max-width: $md3+px) {
+          position: fixed;
+          width: 100%;
+          height: 100%;
+          overflow: auto;
+          top: 0;
+          left: 0;
+          background-color: #ffffff;
+          transition: left 0.3s ease 0s;
+          padding: 70px 15px 30px 15px;
+
+
+        }
       }
       &__list {
         @media (min-width: $md3+px) {
@@ -83,7 +103,7 @@
             }
           }
         }
-        @media (min-width: $md3 + px) {
+        @media (min-width: $md3+px) {
           &:hover{
             .menu__sub-list {
               transform: translate(0px, 0px);
@@ -107,6 +127,9 @@
         color: inherit;
         transition: color 0.3s ease 0s;
         position: relative;
+        @media (max-width: $md3+px) {
+        font-size: 24px;
+        }
       }
       &__link_aboutus {
         font-weight: bold;
@@ -122,6 +145,7 @@
             transform: rotate(-180deg);
           }
         }
+        
       } 
 
       &__sub-list {
@@ -196,8 +220,6 @@
       &__textin{
         color: #BC9CFF;
         font-weight: 700;
-        
-        
         text-transform: uppercase;
       }
     
@@ -206,8 +228,8 @@
         border-radius: 22px;
         box-sizing: border-box;
         padding: 8px 20px;
-
-  
+        position: relative;
+        z-index: 5;
       }
       
       &__textup {
@@ -232,6 +254,7 @@
       transform: rotate(45deg);
       content: "\e900";
       
+      
   }
   
   ._icon-arrow-down {
@@ -249,8 +272,6 @@
       box-sizing: border-box;
       position: absolute;
       border-bottom: 2px solid;
-      
-      
   }
   
   
