--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,7 +2,7 @@
 //<МИКСИНЫ>=================================================================
 @import "mixins";
 //</МИКСИНЫ>=================================================================
-
+@import "icons";
 //<Подключаем шрифты>=================================================================
 //&subset-cyrillic-ext
 @import "fonts";
