--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -61,7 +61,7 @@
           height: 100%;
           overflow: auto;
           top: 0;
-          left: 0;
+          left: -100%;
           background-color: #ffffff;
           transition: left 0.3s ease 0s;
           padding: 70px 15px 30px 15px;
@@ -69,7 +69,14 @@
             content: '';
             position: fixed;
             width: 100%;
-            height: 0;
+            left: -100%;
+            
+          }
+          &._active{
+            left: 0;
+            &::before {
+              left: 0;
+            }
           }
 
         }
@@ -249,6 +256,47 @@
       }
       }
       
+      .icon-menu {
+        display: none;
+        @media (max-width: $md3+px) {
+          @include adaptiv-value("margin-left", 32, 15, 1);
+          position: relative;
+          display: block;
+          flex: 0 0 30px;
+          height: 18px;
+          cursor: pointer;
+          z-index: 5;
+          span {
+            transition: all 0.3s ease 0s;
+            top: calc(50% - 1px);
+            left: 0px;
+            position: absolute;
+            width: 100%;
+            height: 2px;
+            background-color: #000;
+            &:first-child {
+              top: 0px;
+            }
+            &:last-child {
+              top: auto;
+              bottom: 0px;
+            }
+          }
+          &._active {
+            span {
+              transform: scale(0);
+              &:first-child {
+                transform: rotate(-45deg);
+                top: calc(50% - 1px);
+              }
+              &:last-child {
+                transform: rotate(45deg);
+                bottom: calc(50% - 1px);
+              }
+            }
+          }
+        }
+      }
 
 
     
