Добавлена структура футера html
Нужно доработать  кнопку и ее структуру

--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -16,6 +16,13 @@ position: relative;
     margin-left: 0px;
     
 }
+&__line{
+    
+    width: 1400px;
+    border-bottom: 1px solid #cccccc;
+    display: block;
+    
+}
 &__mediaIcons {
     
     justify-content: right;
