Сверстал кнопку, доделан футер
Нужно вставить кнопку в форму с вводом почты

--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,35 +1,4 @@
-.footer {
-    padding-top: 500px;
 
-}
-.footer{
-&__main{
-    margin-bottom: 16px;
-}
-&__buttombody{
-position: relative;
-    display: flex;
-    justify-content: space-between;
-   
-}
-&__copyright {
-    margin-left: 0px;
-    
-}
-&__line{
-    
-    width: 1400px;
-    border-bottom: 1px solid #cccccc;
-    display: block;
-    
-}
-&__mediaIcons {
-    
-    justify-content: right;
-}
-&__icons{
-    padding-left: 18.8px;
-    
-}
-
+._icone-insidebutton-right {
+    margin-left: 122px;
 }
