--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,6 +3,7 @@
 @import "mixins";
 //</МИКСИНЫ>=================================================================
 @import "icons";
+
 //<Подключаем шрифты>=================================================================
 //&subset-cyrillic-ext
 @import "fonts";
@@ -24,7 +25,7 @@ $md3: 767.98;
 $md4: 479.98;
 
 //</ПЕРЕМЕННЫЕ>=================================================================
-
+@import "ui";
 //<ОБНУЛЕНИЕ, ОБЩИЕ ПАРАМЕТРЫ>=================================================================
 @import "null.scss";
 body {
@@ -62,6 +63,10 @@ body {
   margin: 0 auto;
 }
 //</ОСНОВНАЯ СЕТКА>=================================================================
+
+//<ПОДКЛЮЧЕНИЕ ФАЙЛОВ UI СТИЛЕЙ, ФОРМ И ГОТОВЫХ КЛАССОВ>====================================================================================================
+@import "ui";
+//</ПОДКЛЮЧЕНИЕ ФАЙЛОВ UI СТИЛЕЙ, ФОРМ И ГОТОВЫХ КЛАССОВ>====================================================================================================
 
 //<ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>=================================================================
 
