--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,6 +1,40 @@
-.footer{
-    padding: 300px 0px 0px 0px;
-}
+.footer {
+    &__content {}
+    &__body {
+        border-top: 1px solid #ccc;
+        display: grid;
+       grid-template-columns: 250px 1fr 260px;
+       @include adaptiv-value("padding-top", 100, 30, 1);
+       @include adaptiv-value("padding-buttom", 100, 30, 1);  
+       @include adaptiv-value("column-gap", 40, 0, 1);
+
+    }
+    &__main {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    &__logo {
+    
+    }
+    &__reward {
+    
+    }
+    &__menu {}
+    &__subscribe {}
+    &__line {}
+    &__buttombody {}
+    &__copyright {}
+    &__mediaicons {}
+    &__icons {}
+    }
+    
+    
+
+
+
+
+
 .subscribe__form {
     position: relative;
     padding: 0px;
