--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,18 +1,21 @@
 .footer {
     &__content {}
     &__body {
-        border-top: 1px solid #ccc;
-        display: grid;
-       grid-template-columns: 250px 1fr 260px;
-       @include adaptiv-value("padding-top", 100, 30, 1);
-       @include adaptiv-value("padding-buttom", 100, 30, 1);  
-       @include adaptiv-value("column-gap", 40, 0, 1);
+        
 
     }
+    &__mainblock{
+    
+      display: grid;
+     grid-template-columns: 250px 1fr 260px;
+     @include adaptiv-value("padding-top", 100, 30, 1);
+     @include adaptiv-value("padding-buttom", 100, 30, 1);  
+     @include adaptiv-value("column-gap", 40, 0, 1);
+    }
     &__main {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
     }
     &__logo {
     
@@ -22,8 +25,13 @@
     }
     &__menu {}
     &__subscribe {}
-    &__line {}
-    &__buttombody {}
+    &__line {
+      display:flex;
+      border-top: 1px solid #ccc;
+    }
+    &__buttombody {
+      display:flex;
+    }
     &__copyright {}
     &__mediaicons {}
     &__icons {}
