--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -7,7 +7,7 @@
     &__mainblock{
     
       display: grid;
-     grid-template-columns: 300px 1fr 260px;
+     grid-template-columns: 260px 1fr 260px;
      @include adaptiv-value("padding-top", 100, 120, 1);
      @include adaptiv-value("padding-bottom", 98, 23, 1);  // тут нижний отступ нужно будет потыкать на маленьких экранах по середине
      @include adaptiv-value("column-gap", 40, 0, 1);
@@ -28,7 +28,10 @@
       }
     }
     &__menu {
-      
+      display: flex;
+      align-self: start;
+      justify-content: center;
+
     }
     &__subscribe {
       
@@ -48,7 +51,22 @@
     }
     }
     
-    
+
+      .menu-footer {
+        display: flex;
+        justify-content: space-between;
+      &__column {}
+      &__title {
+        
+      }
+      &__list {
+        }
+      &__link {
+        
+      }
+      }
+      
+      
 
 
 
