--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -5,13 +5,12 @@
 
     }
     &__mainblock{
-    
       display: grid;
-     grid-template-columns: 260px 1fr 270px ;
+      grid-template-columns: 260px 1fr 260px;
      @include adaptiv-value("padding-top", 400, 120, 1);
-     @include adaptiv-value("padding-bottom", 78, 23, 1);  // тут нижний отступ нужно будет потыкать на маленьких экранах по середине
+     @include adaptiv-value("padding-margin", 80, 23, 1);  // тут нижний отступ нужно будет потыкать на маленьких экранах по середине
      @include adaptiv-value("column-gap", 40, 0, 1);
-      
+      margin: 0px 0px 100px 0px;
      @media(max-width: $md1 + px){
       grid-template-columns: 1fr 290px;
      }
@@ -29,16 +28,17 @@
      }
     }
     &__logotip {
-    margin: 0px 0px 22px 0px ;
+    margin: 0px 0px 20px 0px ;
     }
     &__reward {
       color: rgba(31, 32, 65, 0.75);
-      line-height: 150%;
+      line-height: 171%;
       &:not(:last-child) {
         margin: 0px 0px 1em 0px;
       }
     }
     &__menu {
+      padding-top: 5px;
       display: flex;
       align-self: start;
       justify-content: center;
@@ -47,7 +47,7 @@
        }
     }
     &__subscribe {
-      
+      padding-top: 5px;
     }
   
     &__buttombody {
@@ -70,19 +70,19 @@
         justify-content: space-between;
       &__column {}
       &__title {
-        margin: 0px 0px 28px 0px;
+        margin: 0px 0px 23px 0px;
       }
       &__list {
         li {
           &:not(:last-child) {
-            margin: 0px 0px 28px 0px;
+            margin: 0px 0px 24px 0px;
           }
         }
         }
       &__link {
         color: rgba(31, 32, 65, 0.5);
         transition: color 0.3s ease 0s;
-        line-height: 120%;
+        line-height: 100%;
         font-weight: 400;
         @media(any-hover: hover) {
           &:hover {
@@ -93,7 +93,7 @@
       }
       .subscribe {
         &__title{
-          margin: 0px 0px 28px 0px;
+          margin: 0px 0px 20px 0px;
         }
         &__text{
           color: rgba(31, 32, 65, 0.5);
@@ -107,7 +107,7 @@
                 }
        
      &__form{
-      margin: 30px 0px 0px 0px;
+      margin: 20px 0px 0px 0px;
     }
     &__button{
       margin: 6px 0px 0px 230px;
