--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -27,6 +27,9 @@
       grid-column: span 2;
       @include adaptiv-value("margin-bottom", 40, 30, 1);
      }
+     @media (max-width:$md2 + px) {
+      margin: 0;
+     }
     }
     &__logotip {
     margin: 0px 0px 20px 0px ;
@@ -66,11 +69,20 @@
       display:flex;
       align-items: center;
       justify-content: space-between;
-      
+      @media (max-width:$md2 + px) {
+        display: block;
+      }
     }
-    &__copyright {}
+    &__copyright {
+      @media (max-width:$md2 + px) {
+        padding-left: 27%;
+        padding-bottom: 25px;
+      }
+    }
     &__mediaicons {
-
+      @media (max-width:$md2 + px) {
+        padding-left: 43%;
+      }
     }
     &__icons:not(:last-child) {
       padding-right: 18px;
@@ -81,13 +93,12 @@
       .menu-footer {
         display: flex;
         justify-content: space-between;
-        
-      &__column {}
-      &__title {
-        margin: 0px 0px 23px 0px;
         @media (max-width:$md2 + px) {
           display: none;
         }
+      &__column {}
+      &__title {
+        margin: 0px 0px 23px 0px;
       }
       &__list {
         li {
